# ghostCAT-Linux-Mouse

./: ATTRIBUTIONS.md  CHANGELOG.md  README.md
ghostcat/: README.md  ghostcat.in  meson.build
ghostcat/.github/ISSUE_TEMPLATE/: bug_report.md
ghostcat/data/: ghostcat.1.in  ghostcat.gresource.xml.in  meson.build  org.freedesktop.GhostCAT.appdata.xml.in.in  org.freedesktop.GhostCAT.desktop.in
ghostcat/data/ui/: AboutDialog.ui.in  ErrorPerspective.ui  ResolutionRow.ui  ResolutionsPage.ui  Window.ui
ghostcat/ghostcat/: advancedpage.py  application.py  buttondialog.py  buttonspage.py  devicerow.py  errorperspective.py  ghostcatd.py  leddialog.py  ledspage.py  mousemap.py  mouseperspective.py  optionbutton.py  profilerow.py  resolutionrow.py  resolutionspage.py  svg.py  welcomeperspective.py  window.py
ghostcat/po/: README.md  meson.build
ghostcat/tests/: check-files-in-git.sh
libratbag/: README.md  meson.build
libratbag/dbus/: org.freedesktop.ghostcat1.conf.in  org.freedesktop.ghostcat1.service.in
libratbag/doc/: dbus.rst
libratbag/ghostcatd/: ghostcatd-button.c  ghostcatd-device.c  ghostcatd-json.c  ghostcatd-json.h  ghostcatd-led.c  ghostcatd-profile.c  ghostcatd-resolution.c  ghostcatd-test.c  ghostcatd-test.h  ghostcatd.c  ghostcatd.h  ghostcatd.service.in  org.freedesktop.ratbag1.conf
libratbag/ratbagd/: ratbagd-device.c  ratbagd-resolution.c  ratbagd.c  ratbagd.h
libratbag/src/: asus.c  asus.h  driver-asus.c  driver-etekcity.c  driver-gskill.c  driver-hidpp10.c  driver-hidpp20.c  driver-logitech-g300.c  driver-logitech-g600.c  driver-openinput.c  driver-roccat-kone-emp.c  driver-roccat-kone-pure.c  driver-roccat.c  driver-sinowealth-nubwo.c  driver-sinowealth.c  driver-sinowealth.h  driver-steelseries.c  driver-test.c  hidpp-generic.c  hidpp-generic.h  hidpp10.c  hidpp10.h  hidpp20.c  hidpp20.h  libghostcat-data.c  libghostcat-data.h  libghostcat-enums.h  libghostcat-hidraw.c  libghostcat-hidraw.h  libghostcat-private.h  libghostcat-test.c  libghostcat-test.h  libghostcat-util.c  libghostcat-util.h  libghostcat.c  libghostcat.h  libghostcat.i  liblur.c  libratbag-private.h  libratbag.c  (+1 more)
libratbag/src/driver-marsgaming/: driver-marsgaming.c  marsgaming-buttons.c  marsgaming-buttons.h  marsgaming-command.c  marsgaming-command.h  marsgaming-commit.c  marsgaming-commit.h  marsgaming-leds.c  marsgaming-leds.h  (+5 more)
libratbag/test/: test-context.c  test-device.c  test-iconv-helper.c  test-util.c
libratbag/tools/: ghostcatc.py.in  ghostcatctl.body.py.in  ghostcatctl.devel.py.in  ghostcatctl.test.py.in  ghostcatd.py  hidpp10-dump-page.c  hidpp20-dump-page.c  hidpp20-reset.c  lur-command.c  merge_ratbagd.py  ratbagctl.body.py.in  shared.c  shared.h  toolbox.py
piper/piper/: mousemap.py  ratbagd.py  resolutionrow.py  resolutionspage.py
